seed_output.log
C:\Users\dalci\playgroung\cefiti\scripts\seed-firestore.ts:8
  reglas,
  ^

SyntaxError: The requested module '../cefiti/src/db.ts' does not provide an export named 'reglas'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:181:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:264:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:583:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:98:5)

Node.js v23.7.0
